--- a/posts/Papers/An Interactive Agent Foundation Model Microsoft Paper/2. Related Work.md
+++ b/posts/Papers/An Interactive Agent Foundation Model Microsoft Paper/2. Related Work.md
@@ -1,5 +1,7 @@
 ## Related Work
 
+Work they are referring
+
 ### [[Foundation Modals ]]
 
 A large number of works have sought to develop general-purpose foundation models.
